# MP-group-error

./: __init__.py  pyproject.toml
src/: 16x10_prop_selector.txt  17x10_prop_selector.txt  19x12_prop_selector.txt  Xoar_T5015_16x10.txt  Xoar_T5015_17x10.txt  Xoar_T5015_19x12.txt  flightlib.py  perflib.py
